making banner green

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -8,6 +8,7 @@
     margin-bottom: 20px;
 }
 
+/* Green banner */
 .navbar .container {
     background-color: #008a00;
     background-image: -moz-linear-gradient(top, #008a00, #006b00);
